--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
     "lib": [
       "es2018",
       "dom"
+    ],
+    "typeRoots": [
+        "node_modules/@types",
+        "node_modules/@angular",
+        "node_modules/rxjs"
     ]
+
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
